resources/ej2-base/releasenotes/WPF/Release-Notes/v17.1.0.47/PdfViewerControl.md
## PdfViewerControl

### Bug Fixes
{:#pdfviewercontrol-bug-fixes} 

* \#224584 - Extracting images from the particular PDF document is now working properly.
* \#226800 – The `SizeChanged` event is now working properly in the `PdfDocumentView` control.
* \#227589 - Time taken for extracting text from the particular PDF document is now optimized.
* \#229093 – `NullReferenceException` will no longer be thrown when printing the particular PDF document silently.
* \#229553 – Now, the particular PDF document is printed properly.
* \#228612, \#230582 – Form fields present in the particular PDF document are now displayed properly.
* \#230188 – Annotations are now saved properly in the rotated PDF document.
* \#230418, \#230356 - Now, the `FindText` method finds the text properly in the particular PDF document.
* \#231093 - Time taken for saving the particular PDF document is now optimized.
* \#231407 – PDF documents are now externally accessible after loading in PDF viewer.
* \#232499 – Size of the form fields are now preserved properly when printing.